--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,12 +1,12 @@
 [ccs_config]
-tag = ccs_config_cesm0.0.49_cm3_v5
+tag = ccs_config_cesm0.0.49_cm3_v6
 protocol = git
 repo_url = https://github.com/CMCC-Foundation/ccs_config_cmcc
 local_path = ccs_config
 required = True
 
 [cam]
-tag = cam6_3_109_cm3_v0
+tag = cam6_3_109_cm3_v1
 protocol = git
 repo_url = https://github.com/CMCC-Foundation/CAM
 local_path = components/cam
@@ -29,7 +29,7 @@ local_path = components/cmeps
 required = True
 
 [cdeps]
-tag = cdeps1.0.4_cm3_v0  
+tag = cdeps1.0.4_cm3_v1  
 protocol = git
 repo_url = https://github.com/CMCC-Foundation/CDEPS
 local_path = components/cdeps
@@ -72,7 +72,7 @@ local_path = cime
 required = True
 
 [clm]
-tag = ctsm5.1.dev114_cm3_v2
+tag = ctsm5.1.dev114_cm3_v3
 protocol = git
 repo_url = https://github.com/CMCC-Foundation/CTSM
 local_path = components/clm
@@ -101,7 +101,7 @@ local_path = components/hydros
 required = True
 
 [nemo]
-tag = nemo4.2.0_cm_04 
+tag = nemo4.2.0_cm_05 
 protocol = git
 repo_url = https://github.com/CMCC-Foundation/NEMO-cime 
 local_path = components/nemo
@@ -109,7 +109,7 @@ externals = Externals.cfg
 required = True
 
 [ww3dev]
-tag = v0.0.5_cm3_02
+tag = ww3_interface_nor10_cm3_v02
 protocol = git
 repo_url = https://github.com/CMCC-Foundation/WW3_interface
 local_path = components/ww3dev
